# PBI-BgDesign

./: .gitignore  pyproject.toml
.superpowers/sdd/: extract_task.py  progress.md  task-1-diff.txt  task-1-report.md  task-1-review.md  task-10-diff.txt  task-10-fix-report.md  task-10-report.md  task-10-review.md  task-11-report.md  task-2-diff.txt  task-2-report.md  task-2-review.md  task-3-diff.txt  task-3-report.md  task-3-review.md  task-4-diff.txt  task-4-report.md  task-4-review.md  task-5-diff.txt  task-5-report.md  task-5-review.md  task-6-diff.txt  task-6-report.md  task-6-review.md  task-7-diff.txt  task-7-report.md  task-7-review.md  task-8-diff.txt  task-8-report.md  task-8-review.md  task-9-diff.txt  task-9-report.md  task-9-review.md
.temp_claude/: analyze_layout.ps1  extract_layout.ps1  list_pbix.ps1
.temp_claude/extracted/: Layout.json
.temp_claude/extracted/StaticResources/RegisteredResources/: Custom3428339380657398.json
docs/superpowers/plans/: 2026-06-28-pbi-bgdesign.md
docs/superpowers/specs/: 2026-06-28-pbi-bg-design.md
src/pbi_bgdesign/: app.py  exporter.py  external_tool.py  layout_analyzer.py  mock_renderer.py  models.py  pbix_parser.py  renderer.py  svg_design.py
src/pbi_bgdesign/ai/: designer.py  mcp_client.py  skills.py
src/pbi_bgdesign/ui/: canvas_widget.py  fullscreen.py  main_window.py  object_list.py
tests/: test_designer.py  test_exporter.py  test_layout_analyzer.py  test_mcp_client.py  test_mock_renderer.py  test_pbix_parser.py  test_renderer.py  test_skills.py  test_svg_design.py
(+1 files in other folders)
